--- a/src/style.css
+++ b/src/style.css
@@ -9,5 +9,5 @@ html {
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: darkseagreen;
+  background-color: #5a657e;
 }
